testcases/negative/nested_vcard.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
BEGIN:VCARD
VERSION:4.0
FN:Nested Card
END:VCARD
END:VCARD
